feat: basic auth with roles