@@ -1,10 +1,7 @@
 package dev.overlax.springsecuritydemo.rest;
 
 import dev.overlax.springsecuritydemo.model.Developer;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -14,12 +11,12 @@ import java.util.stream.Stream;
 @RequestMapping("/api/v1/developers")
 public class DeveloperRestControllerV1 {
 
-    private final List<Developer> DEVELOPERS = Stream.of(
+    private List<Developer> DEVELOPERS = Stream.of(
             new Developer(1L, "Ivan", "Ivanov"),
             new Developer(2L, "Sergey", "Sergeev"),
             new Developer(3L, "Petr", "Petrov"),
             new Developer(4L, "Alex", "Alexeev")
-    ).toList();
+    ).collect(Collectors.toList());
 
     @GetMapping
     public List<Developer> getAll() {
@@ -30,5 +27,16 @@ public class DeveloperRestControllerV1 {
     public Developer getById(@PathVariable Long id) {
         return DEVELOPERS.stream().filter(d -> d.getId().equals(id))
                 .findFirst().orElse(null);
+    }
+
+    @PostMapping
+    public Developer create(@RequestBody Developer developer) {
+        this.DEVELOPERS.add(developer);
+        return developer;
+    }
+
+    @DeleteMapping("/{id}")
+    public void delete(@PathVariable Long id) {
+        this.DEVELOPERS.removeIf(d -> d.getId().equals(id));
     }
 }
